# plenkton-api

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  commands.ipynb  docker-compose.yml  dodo.py  heroku.yml  package.json  pyproject.toml  pytest.ini  tasks.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: codeql-analysis.yml  deploy.yml  pytest.yml  tests.yml
alembic/: env.py
alembic/versions/: 1ffedfb6ea81_base.py  44da46a04765_add_author_article_tag.py  d6f0e4400f86_add_base_tables.py  dd13e9637002_msg.py
back/: __init__.py  __main__.py  config.py  home_test.py  server.py  test_index.py  tests_index.py
back/article/: __init__.py  fixtures.py  tests_articles.py
back/auth/: __init__.py  admin.py  auth0.py  jwt.py  tests_auth.py
back/db/: __init__.py  base.py  models.py  tests_models.py
back/graphql/: __init__.py  base.py  tests.py  tests_query.py
e2e/: Dockerfile
e2e/tests/: tests_index.py
front/: .eslintrc.js  .graphqlrc.yml  Dockerfile  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts  vue.config.js
front/src/: App.vue  main.ts
front/src/assets/: fonts.css
front/src/components/article/: ArticleList.vue
front/src/gql/: schema.graphql
front/src/router/: index.ts
front/src/views/: Admin.vue  EnvVar.vue  HomeView.vue
front/tests/unit/: example.spec.ts
